smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-after-traitdef.smithy
// Parse error at line 7, column 1 near `use`: A use statement must come before any shape definition
namespace smithy.example

@trait
structure foo {}

use smithy.api#String
